# platformer

./: .clang-format  .gitignore  CMakeLists.txt  xmake.lua
cmake/: glfw.cmake
src/: app_info.h  debug.cpp  debug.h  game_renderer.cpp  game_renderer.h  glfw.cpp  glfw.h  main.cpp  render_device.h  vk_validation_layers.h  vulkan.h  window.cpp  window.h  world.h
src/game/: AABB.h  game.cpp  game.h  player.h  raycast.h  solid.h  world.h
src/helper/: vulkan.cpp  vulkan.h
src/helper/vulkan/: extensions.h  validation_layers.h
src/math/: vec.h
src/platform/: os_type.h  thread.h  time.h
src/platform/windows/: win_api.h
src/sys/vulkan/: constants.h  device.h  device_queue.h  instance.h  mem_buffer.h  physical_device.h  pipeline.h  render_pass.h  shaders.h  surface.h  swapchain.h
src/util/: numbers.h  slice.h  time.h
